<resources>
    <string name="app_name">JosimAir</string>

    <!-- Navigation -->
    <string name="title_statistics">Statistics</string>
    <string name="title_air">Air</string>

    <!-- Menu -->
    <string name="menu_setting">설정</string>
    <string name="setting_vibrate">진동</string>
    <string name="setting_sound">소리</string>
    <string name="menu_management">통계 관리</string>

    <!-- Communication -->
    <string name="connection_failed">접속에 실패했습니다</string>
    <string name="connection_lost">블루투스 접속이 끊어졌습니다</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>


    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main">JosimAir</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Layout name list -->
    <string name="Home_layout_air">현재 공기상태</string>
    <string name="Home_layout_statistics">시간별</string>
    <string name="Home_layout_outdoor">실외 공기상태</string>

    <!-- Home Fragment -->
    <string name="bluetooth_connect_btn">블루투스 연결</string>
    <string name="bluetooth_enabled_btn">블루투스 사용 가능</string>

    <!-- Statisics Fragment -->
    <string name="dayChartText">일별 통계</string>
    <string name="weekChartText">주별 통계</string>

    <!-- air quality -->
    <string name="air_quality_good"> 좋음 </string>
    <string name="air_quality_normal"> 보통 </string>
    <string name="air_quality_bad"> 나쁨 </string>
    <string name="outdoor_air_info">이 시각 실외는</string>

    <!-- ventilation -->
    <string name="ventilation">환기가 필요합니다</string>
    <string name="no_ventilation">공기가 좋습니다</string>

    <string name="empty_string">" "</string>

    <!-- btn string -->
    <string name="btn_update">update</string>
    <string name="btn_delete">delete</string>

    <!-- Network State -->
    <string name="network_error">인터넷 상태를 확인하세요</string>
    <string name="gps_error">위치정보를 켜주세요</string>
    <string name="network_receiving">수신중입니다</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Sync Preferences -->
    <string name="tmLocationAPI">http://dapi.kakao.com/v2/local/geo/transcoord.json?x=%s&amp;y=%s&amp;input_coord=WGS84&amp;output_coord=TM</string>
    <string name="nearbyStationAPI">http://openapi.airkorea.or.kr/openapi/services/rest/MsrstnInfoInqireSvc/getNearbyMsrstnList?pageNo=1&amp;numOfRows=10&amp;_returnType=json&amp;ServiceKey=%s&amp;tmX=%s&amp;tmY=%s</string>
    <string name="airInfoAPI">http://openapi.airkorea.or.kr/openapi/services/rest/ArpltnInforInqireSvc/getMsrstnAcctoRltmMesureDnsty?pageNo=1&amp;numOfRows=1&amp;ver=1.3&amp;_returnType=json&amp;ServiceKey=%s&amp;stationName=%s&amp;dataTerm=DAILY</string>

</resources>
